auth refactored
